# exception

examples/exception/: CMakeLists.txt
examples/exception/include/: all.hpp  my_exception.hpp
examples/exception/src/: catch_test.cpp  different_throws.cpp  main.cpp
include/prosto/: exception_all.hpp
include/prosto/exception/: common_print.hpp  exception.hpp
